LIN-3530/LIN-3575 :: Fixed empty rows in MessageTablePmo when duplicate messages are present
Change-Id: I3a69243ce453dabcc4da5d2dcad026aa4185c2ee